# CPP_Nix_Example

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  compile_commands.json  flake.nix  package.nix  pyproject.toml
src/: CMakeLists.txt  addition.cpp  addition.hpp  main.cpp
src_cpp/: CMakeLists.txt  addition.hpp
src_py/: __init__.py  addition.py  hello_world.py
test/: CMakeLists.txt  test.cpp
test_cpp/: CMakeLists.txt  test.cpp
test_py/: test_addition.py
